--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <script type="py">
                 from pyscript import display
                 for _ in range(10) :
-                    display("Bonjour le web") # s'affiche dans le DOM
+                    display("SIUUUUUUUUU") # s'affiche dans le DOM
             </script>
         </strong>
     </p>
