--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </script>
         </strong>
     </p>
-    <img src="https://pyscript.github.io/docs/2023.12.1/assets/images/pyscript.svg" width=60%>
+    <img src="https://www.instagram.com/virtual_.dancer/" width=60%>
     <script type="py" terminal>
-        print("Bonjour le terminal") # s'affiche dans le terminal
+        print("Hola le terminal") # s'affiche dans le terminal
     </script>   
 </body>
 </html>
