--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </script>
         </strong>
     </p>
-    <img src="https://www.instagram.com/virtual_.dancer/" width=60%>
+    <img src="https://media.giphy.com/media/DTjGit29JSV1rr97g1/giphy.gif" width=60%>
     <script type="py" terminal>
-        print("Hola le terminal") # s'affiche dans le terminal
+        print("Bonjour le terminal") # s'affiche dans le terminal
     </script>   
 </body>
 </html>
